--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.0",
+    "sinon": "^15.2.0",
     "spotify-web-api-node": "^5.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
